--- a/src/app/dashboard/layout.module.css
+++ b/src/app/dashboard/layout.module.css
@@ -8,6 +8,7 @@
   align-items: center;
   border-bottom: 1px solid rgb(224, 229, 227);
   justify-content: space-between;
+  background-color: white;
 }
 
 .buttonsWrapper {
@@ -61,6 +62,13 @@
   background-size: 100% var(--border-width)
 }
 
+.pageSelected {
+  border-color: #4cb398;
+  background-color: unset;
+  color: #4cb398;
+  background-size: 100% var(--border-width)
+}
+
 .headerButtons:hover:after {
   transform: scaleX(1);
   transform-origin: 0% 50%;
@@ -82,4 +90,39 @@
   margin-left: 8px;
   cursor: pointer;
   font-size: 12px;
+}
+
+.profileBox {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100px;
+  box-shadow: 1px 1px 5px 1px rgba(230, 227, 230, 1);
+  position: absolute;
+  left: -270px;
+  top: 32px;
+  background-color: white;
+  padding: 12px;
+  justify-content: space-between;
+
+}
+
+.profileWrapper {
+  position: relative;
+}
+
+.accountButtons {
+  cursor: pointer;
+  color: #1f493d
+}
+
+.dashbordContainer {
+  background-color: #F7F8F7;
+  width: 100%;
+  height: 100%;
+
+}
+
+.childrenWrapper {
+  padding: 12px;
 }
